--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,6 @@
-
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
